force-app/main/default/objects/Day_Attendance__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Retailing</fullName><default>false</default><label>Retailing</label></value>
            <value><fullName>Official Work</fullName><default>false</default><label>Official Work</label></value>
            <value><fullName>Manager Joint Work</fullName><default>false</default><label>Manager Joint Work</label></value>
            <value><fullName>Leave</fullName><default>false</default><label>Leave</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>