force-app/main/default/objects/Day_Attendance__c/fields/Assigned_Beats__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Beats__c</fullName>
    <label>Assigned Beats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>