force-app/main/default/objects/Day_Attendance__c/fields/Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Status__c</fullName>
    <label>Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Retailing (R)</fullName><default>false</default><label>Retailing (R)</label></value>
            <value><fullName>Official (O)</fullName><default>false</default><label>Official (O)</label></value>
            <value><fullName>Leave (L)</fullName><default>false</default><label>Leave (L)</label></value>
            <value><fullName>Holiday (H)</fullName><default>false</default><label>Holiday (H)</label></value>
            <value><fullName>Absent (A)</fullName><default>false</default><label>Absent (A)</label></value>
            <value><fullName>Weekly Off (W)</fullName><default>false</default><label>Weekly Off (W)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>