force-app/main/default/objects/Day_Attendance__c/fields/CAP__c.field-meta.xml
<CustomField>
    <fullName>CAP__c</fullName>
    <label>CAP</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>