force-app/main/default/objects/Day_Attendance__c/fields/City_Type_Grade__c.field-meta.xml
<CustomField>
    <fullName>City_Type_Grade__c</fullName>
    <label>City Type / Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Metro</fullName><default>false</default><label>Metro</label></value>
            <value><fullName>City</fullName><default>false</default><label>City</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>