force-app/main/default/objects/Day_Attendance__c/fields/First_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Time__c</fullName>
    <label>First Call Time</label>
    <type>DateTime</type>
</CustomField>