force-app/main/default/objects/Day_Attendance__c/fields/Last_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Time__c</fullName>
    <label>Last Call Time</label>
    <type>DateTime</type>
</CustomField>