force-app/main/default/objects/Day_Attendance__c/fields/Leave_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Leave_Approved_By__c</fullName>
    <label>Leave Approved By</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>DayAttendance_Leave_Approved_By</relationshipName>
    <type>Lookup</type>
</CustomField>