force-app/main/default/objects/Day_Attendance__c/fields/Leave_Reason__c.field-meta.xml
<CustomField>
    <fullName>Leave_Reason__c</fullName>
    <label>Leave Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>