force-app/main/default/objects/Day_Attendance__c/fields/Leave_Session__c.field-meta.xml
<CustomField>
    <fullName>Leave_Session__c</fullName>
    <label>Leave Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Full Day</fullName><default>false</default><label>Full Day</label></value>
            <value><fullName>First Half</fullName><default>false</default><label>First Half</label></value>
            <value><fullName>Second Half</fullName><default>false</default><label>Second Half</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>