force-app/main/default/objects/Day_Attendance__c/fields/Leave_Status__c.field-meta.xml
<CustomField>
    <fullName>Leave_Status__c</fullName>
    <label>Leave Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>