force-app/main/default/objects/Day_Attendance__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Sick Leave</fullName><default>false</default><label>Sick Leave</label></value>
            <value><fullName>Casual Leave</fullName><default>false</default><label>Casual Leave</label></value>
            <value><fullName>Earned Leave</fullName><default>false</default><label>Earned Leave</label></value>
            <value><fullName>Comp-off</fullName><default>false</default><label>Comp-off</label></value>
            <value><fullName>Personal</fullName><default>false</default><label>Personal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>