force-app/main/default/objects/Day_Attendance__c/fields/LPC__c.field-meta.xml
<CustomField>
    <fullName>LPC__c</fullName>
    <label>LPC</label>
    <type>Number</type>
    <precision>6</precision>
    <scale>2</scale>
</CustomField>