force-app/main/default/objects/Day_Attendance__c/fields/Manager_JW_Calls__c.field-meta.xml
<CustomField>
    <fullName>Manager_JW_Calls__c</fullName>
    <label>Manager JW Calls</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>