force-app/main/default/objects/Day_Attendance__c/fields/Norm_Based_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Norm_Based_Attendance__c</fullName>
    <label>Norm-Based Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Present</fullName><default>false</default><label>Present</label></value>
            <value><fullName>Half Day</fullName><default>false</default><label>Half Day</label></value>
            <value><fullName>Absent</fullName><default>false</default><label>Absent</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>