force-app/main/default/objects/Day_Attendance__c/fields/OVC__c.field-meta.xml
<CustomField>
    <fullName>OVC__c</fullName>
    <label>OVC</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>