force-app/main/default/objects/Day_Attendance__c/fields/PC_Must_Sell__c.field-meta.xml
<CustomField>
    <fullName>PC_Must_Sell__c</fullName>
    <label>PC Must-Sell</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>