force-app/main/default/objects/Day_Attendance__c/fields/PJP_Adherence_Pct__c.field-meta.xml
<CustomField>
    <fullName>PJP_Adherence_Pct__c</fullName>
    <label>PJP Adherence %</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>