force-app/main/default/objects/Day_Attendance__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform (login)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Android</fullName><default>false</default><label>Android</label></value>
            <value><fullName>iOS</fullName><default>false</default><label>iOS</label></value>
            <value><fullName>Web</fullName><default>false</default><label>Web</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>