force-app/main/default/objects/Day_Attendance__c/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <label>Qty (Pieces)</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>