force-app/main/default/objects/Day_Attendance__c/fields/Regularisation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Regularisation_Reason__c</fullName>
    <label>Regularisation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>