force-app/main/default/objects/Day_Attendance__c/fields/Retail_Time__c.field-meta.xml
<CustomField>
    <fullName>Retail_Time__c</fullName>
    <label>Retail Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>