force-app/main/default/objects/Day_Attendance__c/fields/Retailing_Grade__c.field-meta.xml
<CustomField>
    <fullName>Retailing_Grade__c</fullName>
    <label>Retailing Grade</label>
    <length>20</length>
    <type>Text</type>
</CustomField>