force-app/main/default/objects/Day_Attendance__c/fields/SC__c.field-meta.xml
<CustomField>
    <fullName>SC__c</fullName>
    <label>SC (Scheduled Calls)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>