force-app/main/default/objects/Day_Attendance__c/fields/Selected_Beats__c.field-meta.xml
<CustomField>
    <fullName>Selected_Beats__c</fullName>
    <label>Selected Beats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>