force-app/main/default/objects/Day_Attendance__c/fields/Sub_Activity__c.field-meta.xml
<CustomField>
    <fullName>Sub_Activity__c</fullName>
    <label>Sub-Activity (Official)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Distributor Visit</fullName><default>false</default><label>Distributor Visit</label></value>
            <value><fullName>Promotional</fullName><default>false</default><label>Promotional</label></value>
            <value><fullName>Training</fullName><default>false</default><label>Training</label></value>
            <value><fullName>Meeting</fullName><default>false</default><label>Meeting</label></value>
            <value><fullName>Distributor Search</fullName><default>false</default><label>Distributor Search</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>