force-app/main/default/objects/Day_Attendance__c/fields/TC__c.field-meta.xml
<CustomField>
    <fullName>TC__c</fullName>
    <label>TC (Total Calls)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>