force-app/main/default/objects/Day_Attendance__c/fields/Telephonic_Orders__c.field-meta.xml
<CustomField>
    <fullName>Telephonic_Orders__c</fullName>
    <label>Telephonic Orders</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>